--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -1,14 +1,18 @@
 # Waves node settins
 waves {
 
+  features {
+    auto-shutdown-on-unsupported-feature = yes
+  }
+
   # Blockchain settings
   blockchain {
     type: CUSTOM
     custom {
       address-scheme-character: "D"
       functionality {
-        feature-check-blocks-period = 100
-        blocks-for-feature-activation = 50
+        feature-check-blocks-period = 60
+        blocks-for-feature-activation = 30
         allow-temporary-negative-until: 1477958400000
         allow-invalid-payment-transactions-by-timestamp: 1477958400000
         require-sorted-transactions-after: 1477958400000
